added dropdown directive

--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-7">
         <app-recipe-details *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipe-details>
         <ng-template #infoText>
-            <p>Plese select a Recipe!</p>
+            <p>Please select a Recipe!</p>
         </ng-template>
     </div>
 </div>
