--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -33,23 +33,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12" formArrayName="ingredients">
                     <h4>Ingredients</h4>
-                    <div class="row">
+                    <div class="row" *ngFor="let ingredientCtrl of controls; let i = index" [formGroupName]="i"
+                        style="margin-top: 10px;">
                         <div class="col-xs-8">
-                            <label for="">Ingredient name</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="name">
                         </div>
                         <div class="col-xs-2">
-                            <label for="">Amount</label>
-                            <input type="number" class="form-control">
+                            <input type="number" class="form-control" formControlName="amount">
                         </div>
                         <div class="col-xs-2">
                             <button class="btn btn-danger">X</button>
                         </div>
                     </div>
+                    <div class="row col-xs-12" style="margin-top: 2rem;">
+                        <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add
+                            Ingredient</button>
+                    </div>
                 </div>
             </div>
+            <hr>
             <div class="row" style="margin-top: 2rem;">
                 <div class="col-xs-12">
                     <button type="submit" class="btn btn-success">Save</button>
