--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,10 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-      <h3>{{ isInLoginMode ? "Login" : "Signup" }}</h3>
+    <div *ngIf="error" class="alert alert-danger">
+      <p>{{ error }}</p>
+    </div>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+      <h3>{{ isInLoginMode ? "Login" : "Sign up" }}</h3>
       <div class="form-group">
         <label for="email">Email</label>
         <input
@@ -33,12 +36,15 @@
           style="margin-right: 1rem"
           [disabled]="!authForm.valid"
         >
-          {{ isInLoginMode ? "Login" : "Signup" }}
+          {{ isInLoginMode ? "Login" : "Sign up" }}
         </button>
         <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
-          Switch to {{ isInLoginMode ? "Signup" : "Login" }}
+          Switch to {{ isInLoginMode ? "Sign up" : "Login" }}
         </button>
       </div>
     </form>
+    <div *ngIf="isLoading" style="text-align: center">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
   </div>
 </div>
